# Guardian-AI

./: .gitignore  GuardianAI-ProjectContext.md  README.md  guardianai_agent_roles.md  offers_registry.csv  regulatory_rules.json  violation_content_samples.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  critics.py  intake.py  llm.py  resolver.py  runner.py
backend/app/api/: __init__.py  routes.py
backend/app/data/: carrier_brand_guidelines.json  channel_audience_matrix.json  good_content_samples.json  source_content_assets.json
backend/app/eval/: run_eval.py
backend/app/graph/: __init__.py  state_graph.py
backend/app/models/: schemas.py
backend/app/skills/: __init__.py  _data.py  channel_validation.py  compliance_lookup.py  content_analysis.py  content_generation.py  offer_verification.py  tools.py
backend/tests/: test_smoke.py
docs/: Guardian-AI-Architect-Deep-Dive.md  Guardian-AI-Overview.md  Guardian-AI-Worked-Example.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AgentCard.tsx  AgentCourtroom.tsx  CriticCard.tsx  DiffView.tsx  IterationView.tsx  OriginalContentPanel.tsx  ResolverPanel.tsx  ScoreProgressionChart.tsx  TopBar.tsx  UserGate.tsx
frontend/src/pages/: ReportPage.tsx  ReviewPage.tsx  UploadPage.tsx
frontend/src/state/: ReviewContext.tsx
frontend/src/types/: index.ts
frontend/src/util/: score.ts
