[project]
name = "guardian-ai-backend"
version = "0.1.0"
description = "Guardian AI — multi-agent adversarial compliance engine for telecom marketing content"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
